import grpc
from concurrent import futures
import csi_pb2
import csi_pb2_grpc
import os
import json
from typing import Dict, Optional
import uuid

class DFSCSIDriver(csi_pb2_grpc.IdentityServicer, 
                  csi_pb2_grpc.ControllerServicer,
                  csi_pb2_grpc.NodeServicer):
    """CSI Driver for Distributed File System"""
    
    def __init__(self):
        self.name = "dfs.csi.k8s.io"
        self.version = "1.0.0"
        self.volumes: Dict[str, Dict] = {}
        
    def GetPluginInfo(self, request, context):
        """Implementation of CSI GetPluginInfo"""
        return csi_pb2.GetPluginInfoResponse(
            name=self.name,
            vendor_version=self.version
        )
        
    def GetPluginCapabilities(self, request, context):
        """Report plugin capabilities"""
        return csi_pb2.GetPluginCapabilitiesResponse(
            capabilities=[
                csi_pb2.PluginCapability(
                    service=csi_pb2.PluginCapability.Service(
                        type=csi_pb2.PluginCapability.Service.CONTROLLER_SERVICE
                    )
                )
            ]
        )
        
    def Probe(self, request, context):
        """Implementation of CSI Probe"""
        return csi_pb2.ProbeResponse(ready=True)
        
    def CreateVolume(self, request, context):
        """Create a new volume"""
        volume_id = str(uuid.uuid4())
        capacity_bytes = request.capacity_range.required_bytes
        
        # Create volume in DFS
        # TODO: Integrate with your hybrid storage system
        volume_context = {
            "capacity_bytes": str(capacity_bytes),
            "volume_id": volume_id
        }
        
        self.volumes[volume_id] = volume_context
        
        return csi_pb2.CreateVolumeResponse(
            volume={
                "volume_id": volume_id,
                "capacity_bytes": capacity_bytes,
                "volume_context": volume_context
            }
        )
        
    def DeleteVolume(self, request, context):
        """Delete a volume"""
        volume_id = request.volume_id
        if volume_id in self.volumes:
            # TODO: Integrate with your hybrid storage system
            del self.volumes[volume_id]
        return csi_pb2.DeleteVolumeResponse()
        
    def ControllerPublishVolume(self, request, context):
        """Publish volume to a node"""
        return csi_pb2.ControllerPublishVolumeResponse(
            publish_context={
                "device_path": f"/dev/dfs/{request.volume_id}"
            }
        )
        
    def ControllerUnpublishVolume(self, request, context):
        """Unpublish volume from a node"""
        return csi_pb2.ControllerUnpublishVolumeResponse()
        
    def ValidateVolumeCapabilities(self, request, context):
        """Validate volume capabilities"""
        return csi_pb2.ValidateVolumeCapabilitiesResponse(
            confirmed={
                "volume_context": request.volume_context,
                "volume_capabilities": request.volume_capabilities
            }
        )
        
    def NodeStageVolume(self, request, context):
        """Stage volume on a node"""
        # TODO: Implement volume staging
        return csi_pb2.NodeStageVolumeResponse()
        
    def NodeUnstageVolume(self, request, context):
        """Unstage volume from a node"""
        # TODO: Implement volume unstaging
        return csi_pb2.NodeUnstageVolumeResponse()
        
    def NodePublishVolume(self, request, context):
        """Publish volume on a node"""
        target_path = request.target_path
        volume_id = request.volume_id
        
        # TODO: Mount the volume using your hybrid storage system
        os.makedirs(target_path, exist_ok=True)
        
        return csi_pb2.NodePublishVolumeResponse()
        
    def NodeUnpublishVolume(self, request, context):
        """Unpublish volume from a node"""
        target_path = request.target_path
        
        # TODO: Unmount the volume
        if os.path.exists(target_path):
            os.rmdir(target_path)
            
        return csi_pb2.NodeUnpublishVolumeResponse()
        
    def NodeGetCapabilities(self, request, context):
        """Report node capabilities"""
        return csi_pb2.NodeGetCapabilitiesResponse(
            capabilities=[
                csi_pb2.NodeServiceCapability(
                    rpc=csi_pb2.NodeServiceCapability.RPC(
                        type=csi_pb2.NodeServiceCapability.RPC.STAGE_UNSTAGE_VOLUME
                    )
                )
            ]
        )

def serve():
    server = grpc.server(futures.ThreadPoolExecutor(max_workers=10))
    driver = DFSCSIDriver()
    
    csi_pb2_grpc.add_IdentityServicer_to_server(driver, server)
    csi_pb2_grpc.add_ControllerServicer_to_server(driver, server)
    csi_pb2_grpc.add_NodeServicer_to_server(driver, server)
    
    server.add_insecure_port('[::]:50051')
    server.start()
    server.wait_for_termination()

if __name__ == '__main__':
    serve()
